# devcontainer-stm32-cubemx-mcp9808

./: .gitmodules  CMakeLists.txt  devcontainer-stm32-cubemx-mcp9808.ioc
Core/Src/: gpio.c
app/main/: CMakeLists.txt  main.cpp
app/mcp9808/: CMakeLists.txt  mcp9808.cpp  mcp9808.hpp  mcp9808_config.hpp  mcp9808_registers.hpp
cmake/stm32cubemx/: CMakeLists.txt
